--- a/HiLoCardGame.CoreTest/HiLoCardGame.CoreTest.csproj
+++ b/HiLoCardGame.CoreTest/HiLoCardGame.CoreTest.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeckTest.cs" />
+    <Compile Include="GameTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
