--- a/HiLoCardGame.UI/HiLoCardGame.UI.csproj
+++ b/HiLoCardGame.UI/HiLoCardGame.UI.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6D5E1ACC-FD33-4927-BE9A-2CAFC3E44965}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HiLoCardGame.Core</RootNamespace>
-    <AssemblyName>HiLoCardGame.Core</AssemblyName>
+    <ProjectGuid>{638DA6BD-D13F-42E4-A9DD-BB91A709F4C4}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>HiLoCardGame.UI</RootNamespace>
+    <AssemblyName>HiLoCardGame.UI</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,21 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domains\ClubsCard.cs" />
-    <Compile Include="Domains\Deck.cs" />
-    <Compile Include="Domains\DiamondsCard.cs" />
-    <Compile Include="Domains\GameSettings.cs" />
-    <Compile Include="Domains\HeartsCard.cs" />
-    <Compile Include="Domains\ICard.cs" />
-    <Compile Include="Domains\SpadesCard.cs" />
-    <Compile Include="Enums\Ranks.cs" />
-    <Compile Include="Enums\Suits.cs" />
-    <Compile Include="Game.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\SetOfDeckService.cs" />
-    <Compile Include="Services\ISetOfDeckService.cs" />
-    <Compile Include="Validations\ValidateGameRules.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HiLoCardGame.Core\HiLoCardGame.Core.csproj">
+      <Project>{6d5e1acc-fd33-4927-be9a-2cafc3e44965}</Project>
+      <Name>HiLoCardGame.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
